protocols/tests/adders/adder_d0/illegal_observation_assertion.out
error: Cannot perform OBSERVED FORBIDDEN PORT on DontCare value in Cannot observe output 's' after assigning DontCare to a dependent input
   ┌─ adders/adder_d0/add_d0.prot:25:13
   │
25 │   assert_eq(DUT.s, s); // this should be illegal
   │             ^^^^^ Cannot perform OBSERVED FORBIDDEN PORT on DontCare value in Cannot observe output 's' after assigning DontCare to a dependent input

